--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lib/**/*"
   ],
   "scripts": {
-    "build": "make build && tsc"
+    "build": "make build && tsc && ctix create ./tsconfig.json"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.6.1",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/node": "^17.0.23",
     "@types/typescript": "^2.0.0",
+    "ctix": "^0.5.3",
     "grpc-tools": "^1.11.2",
     "ts-proto": "^1.110.2"
   },
